# Hasty-Calculator

./: Cargo.toml
src/: eval.rs  lib.rs
src/eval/: error.rs  evaluate.rs  mod.rs
src/read/: error.rs  lexer.rs  mod.rs
src/read/state/: machine.rs
src/token/: mod.rs  parantheses.rs
src/token/operator/: error.rs  executable.rs  executables.rs  mod.rs
tests/: test.rs
