[package]
name = "hastycalc"
version = "0.0.5"
edition = "2024"
license = "MIT"
description = "A fast and memory effencient calculator library"
authors = ["Jayden Huang"]
homepage = "https://github.com/JaydenHuang555/Hasty-Calculator"
repository = "https://github.com/JaydenHuang555/Hasty-Calculator"
keywords = ["jayutil", "calculator", "fast"]

[dependencies]
